--- a/WebAPI-Practices/appsettings.json
+++ b/WebAPI-Practices/appsettings.json
@@ -1,10 +1,14 @@
-{
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
-}
+
+  {
+    "ConnectionStrings": {
+      "default": "Server=.;Database=WebApiDb;Trusted_Connection=True;"
+    },
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "AllowedHosts": "*"
+  }
